--- a/body-style.css
+++ b/body-style.css
@@ -184,6 +184,8 @@ input {border: none;box-sizing: border-box;}
 .PopularPosts .item-thumbnail {float: none;display: table-cell;}
 .PopularPosts .item-thumbnail img {width: 145px;height: 80px;padding-right: 0 !important;border: 1px solid #fff;border-radius: 5%;}
 .PopularPosts .item-title {padding-left: 13px;display: table-cell;vertical-align: middle;line-height: 1.5;font-family: Arial,Georgia,Serif;font-size: 0.875rem;font-weight: 700;text-transform: capitalize;border-bottom: 2px solid #e6e6e6;}
+.PopularPosts .widget-content a{padding-left: 13px;display: table-cell;vertical-align: middle;line-height: 1.5;font-family: Arial,Georgia,Serif;font-size: 0.875rem;font-weight: 700;text-transform: capitalize;border-bottom: 2px solid #e6e6e6;}
+.PopularPosts .widget-content a:hover {color: #21759b;}
 .PopularPosts .item-title a:hover {color: #21759b;}
 /*--RelatedPosts--*/
 .related-posts {width: 100%;margin-bottom: 30px;margin-top: 30px;}
