--- a/site-custom.css
+++ b/site-custom.css
@@ -1,13 +1,13 @@
 .main-menu {width: 100%;margin: 0 auto;padding: 0;max-width: 82.667em;min-height: 15.5em;}
 .icon-home, .icon-blog, .icon-social, .icon-internet, .icon-mobile,.icon-about, .icon-contact, .icon-menu {font-family: FontAwesome;speak: none;font-style: normal;font-weight: normal;font-variant: normal;text-transform: none;line-height: 1;-webkit-font-smoothing: antialiased;}
 .icon-home:before {content: "\f015";}
-.icon-blog:before {content: "\f10b";}
+.icon-blog:before {content:"\f02d";}
 .icon-social:before {content: "\f164";}
-.icon-internet:before {content: "\f022";}
-.icon-mobile:before {content: "\f022";}
+.icon-internet:before {content:"\f26b";}
+.icon-mobile:before {content:"\f17b";}
 .icon-about:before {content: "\f007";}
 .icon-contact:before {content: "\f003";}
-.icon-menu:before {content: "\f022";}
+.icon-menu:before {content:"\f0ca";}
 a, li {-webkit-tap-highlight-color: rgba(0, 0, 0, 0);}
 .nav ul {max-width: 1240px;margin: 0;padding: 0;list-style: none;font-size: 1.5em;font-weight: 300;}
 .nav li span {display: block;}
@@ -16,25 +16,25 @@ a, li {-webkit-tap-highlight-color: rgba(0, 0, 0, 0);}
 a, button {-webkit-tap-highlight-color: rgba(0, 0, 0, 0);}
 .no-touch .nav ul:hover a {color: rgba(249, 249, 249, .5);}
 .no-touch .nav ul:hover a:hover {color: rgba(249, 249, 249, 0.99);}
-.nav li:nth-child(6n+1) {background: rgb(208, 101, 3);}
-.nav li:nth-child(6n+2) {background: rgb(233, 147, 26);}
-.nav li:nth-child(6n+3) {background: rgb(22, 145, 190);}
-.nav li:nth-child(6n+4) {background: rgb(22, 107, 162);}
-.nav li:nth-child(6n+5) {background: rgb(7, 154, 51);}
-.nav li:nth-child(6n+6) {background: rgb(27, 54, 71);}
-.nav li:nth-child(6n+7) {background: rgb(21, 40, 54);}
+.nav li:nth-child(7n+1) {background: rgb(208, 101, 3);}
+.nav li:nth-child(7n+2) {background: rgb(233, 147, 26);}
+.nav li:nth-child(7n+3) {background: rgb(22, 145, 190);}
+.nav li:nth-child(7n+4) {background: rgb(22, 107, 162);}
+.nav li:nth-child(7n+5) {background: rgb(7, 154, 51);}
+.nav li:nth-child(7n+6) {background: rgb(27, 54, 71);}
+.nav li:nth-child(7n+7) {background: rgb(21, 40, 54);}
 @media ( min-width : 50em) {
 .main-menu {min-height: 15em;}
 /* Transforms the list into a horizontal navigation */
 .nav li {float: left;width: 14.2857142857%;text-align: center;-webkit-transition: border .5s;-moz-transition: border .5s;-o-transition: border .5s;-ms-transition: border .5s;transition: border .5s;}
 .nav a {display: block;width: auto;}
-.no-touch .nav li:nth-child(6n+1) a:hover, .no-touch .nav li:nth-child(6n+1) a:active,.no-touch .nav li:nth-child(6n+1) a:focus {border-bottom: 4px solid rgb(174, 78, 1);}
-.no-touch .nav li:nth-child(6n+2) a:hover, .no-touch .nav li:nth-child(6n+2) a:active,.no-touch .nav li:nth-child(6n+2) a:focus {border-bottom: 4px solid rgb(191, 117, 20);}
-.no-touch .nav li:nth-child(6n+3) a:hover, .no-touch .nav li:nth-child(6n+3) a:active,.no-touch .nav li:nth-child(6n+3) a:focus {border-bottom: 4px solid rgb(12, 110, 149);}
-.no-touch .nav li:nth-child(6n+4) a:hover, .no-touch .nav li:nth-child(6n+4) a:active,.no-touch .nav li:nth-child(6n+4) a:focus {border-bottom: 4px solid rgb(10, 75, 117);}
-.no-touch .nav li:nth-child(6n+5) a:hover, .no-touch .nav li:nth-child(6n+5) a:active,.no-touch .nav li:nth-child(6n+5) a:focus {border-bottom: 4px solid rgb(6, 134, 34);}
-.no-touch .nav li:nth-child(6n+6) a:hover, .no-touch .nav li:nth-child(6n+6) a:active,.no-touch .nav li:nth-child(6n+6) a:focus {border-bottom: 4px solid rgb(16, 34, 44);}
-.no-touch .nav li:nth-child(6n+7) a:hover, .no-touch .nav li:nth-child(6n+7) a:active,.no-touch .nav li:nth-child(6n+7) a:focus {border-bottom: 4px solid rgb(9, 18, 25);}
+.no-touch .nav li:nth-child(7n+1) a:hover, .no-touch .nav li:nth-child(7n+1) a:active,.no-touch .nav li:nth-child(7n+1) a:focus {border-bottom: 4px solid rgb(174, 78, 1);}
+.no-touch .nav li:nth-child(7n+2) a:hover, .no-touch .nav li:nth-child(7n+2) a:active,.no-touch .nav li:nth-child(7n+2) a:focus {border-bottom: 4px solid rgb(191, 117, 20);}
+.no-touch .nav li:nth-child(7n+3) a:hover, .no-touch .nav li:nth-child(7n+3) a:active,.no-touch .nav li:nth-child(7n+3) a:focus {border-bottom: 4px solid rgb(12, 110, 149);}
+.no-touch .nav li:nth-child(7n+4) a:hover, .no-touch .nav li:nth-child(7n+4) a:active,.no-touch .nav li:nth-child(7n+4) a:focus {border-bottom: 4px solid rgb(10, 75, 117);}
+.no-touch .nav li:nth-child(7n+5) a:hover, .no-touch .nav li:nth-child(7n+5) a:active,.no-touch .nav li:nth-child(7n+5) a:focus {border-bottom: 4px solid rgb(6, 134, 34);}
+.no-touch .nav li:nth-child(7n+6) a:hover, .no-touch .nav li:nth-child(7n+6) a:active,.no-touch .nav li:nth-child(7n+6) a:focus {border-bottom: 4px solid rgb(16, 34, 44);}
+.no-touch .nav li:nth-child(7n+7) a:hover, .no-touch .nav li:nth-child(7n+7) a:active,.no-touch .nav li:nth-child(7n+7) a:focus {border-bottom: 4px solid rgb(9, 18, 25);}
 .icon {padding-top: 1em;}
 .icon+span {margin-top: 2.1em;-webkit-transition: margin .5s;-moz-transition: margin .5s;-o-transition: margin .5s;-ms-transition: margin .5s;transition: margin .5s;}
 /* Animating the height of the element*/
@@ -53,19 +53,20 @@ a, button {-webkit-tap-highlight-color: rgba(0, 0, 0, 0);}
 /* The "tablet" and "mobile" version */
 @media ( max-width : 49.938em) {
 /* Instead of adding a border, we transition the background color */
-.no-touch .nav ul li:nth-child(6n+1) a:hover, .no-touch .nav ul li:nth-child(6n+1) a:active,.no-touch .nav ul li:nth-child(6n+1) a:focus {background: rgb(227, 119, 20);}
-.no-touch .nav li:nth-child(6n+2) a:hover, .no-touch .nav li:nth-child(6n+2) a:active,.no-touch .nav li:nth-child(6n+2) a:focus {background: rgb(245, 160, 41);}
-.no-touch .nav li:nth-child(6n+3) a:hover, .no-touch .nav li:nth-child(6n+3) a:active,.no-touch .nav li:nth-child(6n+3) a:focus {background: rgb(44, 168, 219);}
-.no-touch .nav li:nth-child(6n+4) a:hover, .no-touch .nav li:nth-child(6n+4) a:active,.no-touch .nav li:nth-child(6n+4) a:focus {background: rgb(31, 120, 176);}
-.no-touch .nav li:nth-child(6n+5) a:hover, .no-touch .nav li:nth-child(6n+5) a:active,.no-touch .nav li:nth-child(6n+5) a:focus {background: rgb(9, 170, 50);}
-.no-touch .nav li:nth-child(6n+6) a:hover, .no-touch .nav li:nth-child(6n+6) a:active,.no-touch .nav li:nth-child(6n+6) a:focus {background: rgb(39, 70, 90);}
-.no-touch .nav li:nth-child(6n+7) a:hover, .no-touch .nav li:nth-child(6n+7) a:active,.no-touch .nav li:nth-child(6n+7) a:focus {background: rgb(32, 54, 68);}
+.no-touch .nav ul li:nth-child(7n+1) a:hover, .no-touch .nav ul li:nth-child(7n+1) a:active,.no-touch .nav ul li:nth-child(7n+1) a:focus {background: rgb(227, 119, 20);}
+.no-touch .nav li:nth-child(7n+2) a:hover, .no-touch .nav li:nth-child(7n+2) a:active,.no-touch .nav li:nth-child(7n+2) a:focus {background: rgb(245, 160, 41);}
+.no-touch .nav li:nth-child(7n+3) a:hover, .no-touch .nav li:nth-child(7n+3) a:active,.no-touch .nav li:nth-child(7n+3) a:focus {background: rgb(44, 168, 219);}
+.no-touch .nav li:nth-child(7n+4) a:hover, .no-touch .nav li:nth-child(7n+4) a:active,.no-touch .nav li:nth-child(7n+4) a:focus {background: rgb(31, 120, 176);}
+.no-touch .nav li:nth-child(7n+5) a:hover, .no-touch .nav li:nth-child(7n+5) a:active,.no-touch .nav li:nth-child(7n+5) a:focus {background: rgb(9, 170, 50);}
+.no-touch .nav li:nth-child(7n+6) a:hover, .no-touch .nav li:nth-child(7n+6) a:active,.no-touch .nav li:nth-child(7n+6) a:focus {background: rgb(39, 70, 90);}
+.no-touch .nav li:nth-child(7n+7) a:hover, .no-touch .nav li:nth-child(7n+7) a:active,.no-touch .nav li:nth-child(7n+7) a:focus {background: rgb(32, 54, 68);}
 .nav ul li {-webkit-transition: background 0.5s;-moz-transition: background 0.5s;-o-transition: background 0.5s;-ms-transition: background 0.5s;transition: background 0.5s;}
 }
 /* CSS specific to the 2x3 columns version */
 @media ( min-width :32.5em) and (max-width: 49.938em) {
 /* Creating the 2 column layout using floating elements once again */
 .nav li {display: block;float: left;width: 50%;}
+.nav li .h {width: 50%;}
 .nav a {padding: 0.6em;}
 /* Displaying the icons on the left, and the text on the right side using inlin-block*/
 .nav li span, .nav li span.icon {display: inline-block;}
@@ -98,13 +99,13 @@ a, button {-webkit-tap-highlight-color: rgba(0, 0, 0, 0);}
 .nav li span {display: inline-block;height: 100%;}
 .nav a {padding: 0.5em;}
 .icon+span {margin-left: 1em;font-size: 0.8em;}
-.nav li:nth-child(6n+1) {border-left: 8px solid rgb(174, 78, 1);}
-.nav li:nth-child(6n+2) {border-left: 8px solid rgb(191, 117, 20);}
-.nav li:nth-child(6n+3) {border-left: 8px solid rgb(13, 111, 150);}
-.nav li:nth-child(6n+4) {border-left: 8px solid rgb(10, 75, 117);}
-.nav li:nth-child(6n+5) {border-left: 8px solid rgb(6, 134, 34);}
-.nav li:nth-child(6n+6) {border-left: 8px solid rgb(16, 34, 44);}
-.nav li:nth-child(6n+7) {border-left: 8px solid rgb(9, 18, 25);}
+.nav li:nth-child(7n+1) {border-left: 8px solid rgb(174, 78, 1);}
+.nav li:nth-child(7n+2) {border-left: 8px solid rgb(191, 117, 20);}
+.nav li:nth-child(7n+3) {border-left: 8px solid rgb(13, 111, 150);}
+.nav li:nth-child(7n+4) {border-left: 8px solid rgb(10, 75, 117);}
+.nav li:nth-child(7n+5) {border-left: 8px solid rgb(6, 134, 34);}
+.nav li:nth-child(7n+6) {border-left: 8px solid rgb(16, 34, 44);}
+.nav li:nth-child(7n+7) {border-left: 8px solid rgb(9, 18, 25);}
 /* make the nav bigger on touch screens */
 .touch .nav a {padding: 0.8em;}
 }
