--- a/site-default.css
+++ b/site-default.css
@@ -2,7 +2,6 @@
 http://meyerweb.com/eric/tools/css/reset/ 
 http://cssreset.com
 */
-
 /*--Styles--*/
 html, body, div, span, applet, object, iframe,h1, h2, h3, h4, h5, h6, p, blockquote, pre,a, abbr, acronym, address, big, cite, code,del, dfn, em, img, ins, kbd, q, s, samp,small, strike, strong, sub, sup, tt, var,b, u, i, center,dl, dt, dd, ol, ul, li,fieldset, form, label, legend,table, caption, tbody, tfoot, thead, tr, th, td,article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,time, mark, audio, video {margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;}
 body {line-height: 1;}
@@ -48,43 +47,22 @@ input {border: none;box-sizing: border-box;}
 #header-line p1:hover{color:#f57d00;}
 /*--zigzag--*/
 .zigzag{width:100%;height:20px;position:relative;}
-#zigzag-header{top:-65px;}
 #zigzag-footer{bottom:-15px;}
 /*--NavBorder--*/
 .top-nav-header {height: 5px;background: #555555;color: #fff;}
 .bottom-nav-footer{height: 2px;background: #555555;margin-top: 12px;}
-/*--MainMenu--*/
-#main-nav-segment {height: 66px;margin-bottom: 60px;background: #464646;border-top: 4px solid #21759b;}
-#main-nav-segment .container {position: relative;}
-#main-nav-segment .widget {position: static;}
-#main-nav {float: left;}
-#mobile-menu-btn {display: none;}
-#main-nav .icon {color: #fff;font-size: 2rem;}
-#main-nav .widget-content>ul>li {float: left;margin-right: 5px;color: #fff;line-height: 63px;}
-#main-nav .widget-content>ul>li>a {padding: 19px 15px;border-radius: 3px;font-size: 0.975rem;font-weight: 700;}
-#main-nav .widget-content>ul>li>a:hover {background-color: #21759b;}
-#main-nav .widget-content>ul>li>a:hover+.index-menu-segment {display: block;}
-.index-icon:after {content: '\25be';}
-/*--indexMenus--*/
-.index-menu-segment {position: absolute;left: 0;right: 0;top: 62px;display: none;z-index: 99;}
-.index-menu-segment:before {content: '';display: block;height: 6px;position: absolute;top: -6px;left: 0;right: 0;background: transparent;}
-.index-menu-segment:hover {display: block;}
-.index-menu {background: #555;padding: 15px !important;border-top: 4px solid #21759b;border-bottom: 4px solid #21759b;z-index: 99;}
-.index-post {float: left;width: 23%;margin-right: 2.6% !important;}
-.index-post:last-child {margin-right: 0 !important;}
-.index_post-image {display: block;width: 100%;height: 180px;margin-bottom: 10px;border: 2px solid #747474;}
-.index_post-title {font-family: Arial,Georgia,Serif;font-weight: 700;line-height: 1.7;}
 .stickyHeader {width: 100%;-webkit-appearance: none;-moz-appearance: none;appearance: none;}
 .fixed {position: fixed;top:0;z-index: 9;}
 .header-fixed-placeholder{height: 80px;display: none;}
 .fixed .header-fixed-placeholder {display: block;}
 /*--SearchBox--*/
+.site-search {width: 100%;overflow: hidden;}
 .search-btn{float:right;position: relative;right: 45px;top:12px;left:0px;border-radius: 3px;background-color:  #3a3c3e;width: 44px;height: 39px;cursor: pointer;-ms-user-select: none;-moz-user-select: none;-webkit-user-select: none;user-select: none;}
 .search-btn:before {position: absolute;content: '';border-radius: 50%;border: 3px solid #fff;width: 12px;height: 12px;top: 12px;left: 14px;}
 .search-btn:after {position: absolute;content: '';background-color: #fff;width: 4px;height: 8px;top: 21px;left: 25px;-webkit-transform: rotate(-44deg);-moz-transform: rotate(-44deg);transform: rotate(-44deg);}
 .search-box {padding: 12px;}
 .search-box  form {float:right;position: relative;border-radius: 3px;background-color:  #21759b;width: 4px;height: 39px;}
-.search-box  form input {display: none;position: absolute;right: 4px;padding: 11px 12px 9px;border: none;width: 210px;border-radius: 2px 0 0 2px;height: 39px;box-sizing: border-box;-webkit-appearance: none;-moz-appearance: none;appearance: none;}
+.search-box  form input {display: block;position: absolute;right: 4px;padding: 11px 12px 9px;border: 3px solid #21759b;width: 270px;border-radius: 2px 0 0 2px;height: 39px;box-sizing: border-box;-webkit-appearance: none;-moz-appearance: none;appearance: none;}
 /*--WidgetsStyles--*/
 #blog-posts .HTML {margin: 0;}
 .main-content {position: relative;margin-bottom: 70px;}
@@ -97,7 +75,7 @@ input {border: none;box-sizing: border-box;}
 .post-timestamp {margin-left: 0 !important;margin-right: 45px;white-space: nowrap;}
 .post-comment-link {white-space: nowrap;}
 .read-more {position: absolute;right: 0;bottom: 0;background-color: #21759b;color: #fff !important;padding: 13px 10px;}
-/*--PostMetaIndex--*/
+/*--PostMeta--*/
 .post-header {padding: 10px 10px;margin-bottom: 5px;margin-left: 0 !important;}
 .post-header .post-title {border-bottom: 2px solid #21759b;padding-bottom: 2px;margin-left: 0 !important;}
 .post-footer {font-size: 0.875rem;font-weight: 500;border-top: 2px solid #21759b;}
@@ -149,7 +127,7 @@ input {border: none;box-sizing: border-box;}
 .continue a {background: #21759b;border: 1px solid #21759b;border-radius: 5px;color: #ffffff;display: inline-block !important;margin-top: 8px;padding: 5px;text-decoration: none !important;font: 12px georgia, arial;}
 .comment-block {background: #F9F9F9;border: 1px solid #f1f1f1;margin-bottom: 20px;-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .4);-moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .4);box-shadow: 0 1px 2px rgba(0, 0, 0, .4);-moz-border-radius: 10px;-webkit-border-radius: 10px;border-radius: 10px;}
 .comments .comment-thread.inline-thread {border-left: 4px dotted #eaeaea;}
-.comment-form {background:url(https://4.bp.blogspot.com/-4Igg3D1fZAM/V67IltanSkI/AAAAAAAAFSA/K51pYSKYDeIl3Z--Umzq9CbUJh9x7U7xACPcB/s1600/plz-do-not-spam.gif)no-repeat bottom right;border: 2px solid #21759b;}
+.comment-form {border: 2px solid #21759b;}
 /*--OtherPosts--*/
 .status-msg-wrap {font-size: 1rem;width: 100%;margin-top: 0 !important;margin-bottom: 20px;position: relative;}
 .home-page-btn {color: #21759b !important;}
@@ -199,21 +177,6 @@ input {border: none;box-sizing: border-box;}
 .related-post-title {position: absolute;z-index: 2;bottom: 4px;left: 0;right: 0;padding: 10px;background-color: #464646;color: #fff;font-weight: 700;line-height: 1.6;}
 .related-posts-item:hover .related-post-title {background: #000;}
 .icon {margin-right: 5px;transition: all 0s ease-in-out;}
-/*--RandomPosts--*/
-.random-posts .post-segment {padding: 10px 0 !important;}
-.random-posts .post-segment:first-child {padding-top: 0 !important;}
-.random-posts .post-segment:last-child {border-bottom: 0;padding-bottom: 0;}
-.random_post-image {position: relative;float: left;width: 145px;height: 75px;margin-right: 10px;border: 1px solid #fff;border-radius: 5%;z-index: 2;}
-.random_post-title {font-family: Arial,Georgia,Serif;font-size: 0.875rem;font-weight: 700;line-height: 1.5;text-transform: capitalize;}
-.random_post-title:hover {color: #21759b;}
-.random-posts .post-comments {float: right;font-size: 0.75rem;margin-top: 10px;font-weight: 700;color: #aaa;}
-.random-posts .post-comments:hover {color: #000;}
-/*--RecentPosts--*/
-.recent-post-item {display: table;padding: 10px 0 !important;}
-.recent-post-item:first-child {padding-top: 0 !important;}
-.recentposts .post-image {position: relative;display: table-cell;width: 145px;height: 75px;border: 1px solid #fff;border-radius: 5%;z-index: 2;}
-.recentposts .post-title {display: table-cell;vertical-align: middle;padding-left: 10px;font-family: Arial,Georgia,Serif;font-size: 0.875rem;font-weight: 700;line-height: 1.5;text-transform: capitalize;}
-.recentposts .heading:hover {color: #21759b;}
 /*--Footer--*/
 #footer-segment {background: #444444;color: #FFFFFF;padding: 30px 0 0;}
 #footer-copyright {padding: 2px 0 5px;text-align: center;font-family: Georgia,Serif;}
@@ -241,14 +204,15 @@ blockquote:before {display: block;content: "\201C";font-size: 80px;position: abs
 .btn.btn_large {padding: 12px 18px;font-size: 18px;line-height: 26px;}
 .btn.btn_small {padding: 2px 6px;font-size: 11px;line-height: 20px;}
 .alert {position: relative;padding: 15px;margin-bottom: 20px;color: #fff;}
+.alert.alert_green,.alert.alert_blue,.alert.alert_red,.alert.alert_yellow {margin-right: 8px;font-family: FontAwesome;speak: none;font-style: normal;font-weight: normal;font-variant: normal;text-transform: none;-webkit-font-smoothing: antialiased;}
 .alert.alert_green {background-color: #7ab55c;}
 .alert.alert_blue {background-color: #2980b9;}
 .alert.alert_red {background-color: #e74c3c;}
 .alert.alert_yellow {background-color: #eb8000;}
-.alert.alert_green:before {content: '\f087';font-family: 'fontawesome';margin-right: 8px;}
-.alert.alert_blue:before {content: '\f1cd';font-family: 'fontawesome';margin-right: 8px;}
-.alert.alert_red:before {content: '\f00d';font-family: 'fontawesome';margin-right: 8px;}
-.alert.alert_yellow:before {content: '\f071 ';font-family: 'fontawesome';margin-right: 8px;}
+.alert.alert_green:before {content: '\f087';}
+.alert.alert_blue:before {content: '\f1cd';}
+.alert.alert_red:before {content: '\f00d';}
+.alert.alert_yellow:before {content: '\f071';}
 .pullquotes {position: relative;font-size: 18px;line-height: 26px;font-weight: 600;font-style: italic;color: #21759b;}
 .pullquotes.left {float: left;width: 30%;margin: 10px 25px 15px 0;}
 .pullquotes.right {float: right;width: 30%;margin: 10px 0 15px 25px;}
@@ -262,14 +226,9 @@ blockquote:before {display: block;content: "\201C";font-size: 80px;position: abs
 .col_8_of_12 {width: 66.66666667%;}
 pre {display: block;
 overflow: hidden;padding: 10px;margin: 0 0 10px;font-family: Arial,Georgia,Serif;font-size: 12px;line-height: 20px;word-break: break-all;word-wrap: break-word;background-color: #f1f1f1;border: none;}
-/*--ContactForm--*/
-.contact-info {width: 100%;border: 1px solid #e6e6e6;height: 40px;padding-left: 10px;margin-bottom: 15px;}
-.contact-info:focus {outline: 2px solid #eec814;}
-#message {height: 300px;max-width: 100%;}
-#send-button {width: 100%;height: 40px;cursor: pointer;background: #21759b;color: #fff;}
-#send-button:hover {background: #555;}
 /*--SocialConnect--*/
 .sidebar-segment .HTML {font-size: 0;}
+.social-follow  {width: 100%;overflow: hidden;}
 .social_item-follow {float: left;width: 30.67%;text-align: center;margin-right: 4% !important;margin-bottom: 15px !important;color: #fff;}
 .social_item-follow:nth-child(3n+3) {margin-right: 0 !important;}
 .social_item-follow a{border-radius: 40px;}
@@ -353,21 +312,11 @@ overflow: hidden;padding: 10px;margin: 0 0 10px;font-family: Arial,Georgia,Serif
 .blog-posts-segment {float: none;max-width: 100%;margin-bottom: 30px;}
 .sidebar-segment {float: none;width: 100%;}
 .social_item-follow {width: 30.6%;}
-.recent-post-item {width: 100%;}
 #footer-segment .container > .section {width: 100%;float: none;}
 }
 @media only screen and (max-width: 880px) {
-#main-nav-segment {position: relative;}
-#main-nav {position: absolute;top: 66px;display: none;z-index: 999;}
-#mobile-menu-btn {display: block;line-height: 61px;float: left;padding: 0 10px;color: #fff;cursor: pointer;background: #21759b;font-size: 30px;}
-#main-nav .widget-content > ul { background: #555;}
-#main-nav .widget-content > ul > li {float: none !important;margin-right: 0;line-height: 40px;}
-#main-nav .widget-content > ul > li > a {padding: 0 15px;border-radius: 0;display: block;}
-.index-menu {display: none !important;}
-.index-icon:after {content: '';}
 .searchbox form{right: 10px;}
 #footer-copyright {padding: 2px 0 50px;text-align: center;}
-#zigzag-header{display:none}
 }
 @media only screen and (max-width: 768px) {
 .header-logo-container .widget:last-child {display: none;}
@@ -413,9 +362,8 @@ overflow: hidden;padding: 10px;margin: 0 0 10px;font-family: Arial,Georgia,Serif
 #footer-segment {padding: 0;font-size: 10px;}
 }
 @media only screen and (max-width: 288px) {
-.read-more {padding: 16px;}
+.read-more {padding: 16px;width:100%;}
 .searchbox{display: none;}
-.read-more {width:100%;}
 }
 /*--TemplateStyle--*/
 body#layout {text-transform: capitalize;}
@@ -423,11 +371,9 @@ body#layout div.section {margin: 0 0 10px 0;}
 #layout .pre-loader {display:none;}
 #layout .header {padding: 6px;margin-bottom: 15px;padding-bottom: 0px;padding-top: 7px;}
 #layout .header .widget-content {border: 0 !important;}
-#layout #main-nav-segment {margin-bottom: 100px;}
 #layout #header-logo-container {overflow: hidden !important;}
 #layout #Header1 {float: left !important;width: 30% !important;display: block;}
 #layout .header-logo-container .HTML {float: right !important;display: block;width: 67% !important;}
-#layout #main-nav {float: none;}
 #layout #search-box,#layout #search-input {display: none;}
 #layout #slider {height: 77px;text-transform: capitalize;border: 0 !important;}
 #layout #slider .widget {min-height: 0;}
