--- a/site-default.css
+++ b/site-default.css
@@ -128,12 +128,15 @@ input {border: none;box-sizing: border-box;}
 .comment-block {background: #F9F9F9;border: 1px solid #f1f1f1;margin-bottom: 20px;-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .4);-moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .4);box-shadow: 0 1px 2px rgba(0, 0, 0, .4);-moz-border-radius: 10px;-webkit-border-radius: 10px;border-radius: 10px;}
 .comments .comment-thread.inline-thread {border-left: 4px dotted #eaeaea;}
 .comment-form {border: 2px solid #21759b;}
-/*--OtherPosts--*/
+/*--searchStatus--*/
 .status-msg-wrap {font-size: 1rem;width: 100%;margin-top: 0 !important;margin-bottom: 20px;position: relative;}
+.status-msg-wrap a{padding-left:.4em;text-decoration:underline}
+.status-msg-border{border:1px solid #000;filter:alpha(opacity=40);-moz-opacity:.4;opacity:.4;width:100%;position:relative}
+.status-msg-bg {background-color: #f7f7f7;opacity:.8;filter:alpha(opacity=30);-moz-opacity:.8;width:100%;position:relative;z-index:1}
+.status-msg-body{text-align:center;padding:.3em 0;width:100%;position:absolute;z-index:4}
+.status-msg-hidden{visibility:hidden;padding:.3em 0}
 .home-page-btn {color: #21759b !important;}
 .home-page-btn:hover {text-decration: unferline;}
-.status-msg-border {border: 1px solid #ccc;}
-.status-msg-bg {background-color: #f7f7f7;}
 /*--Sidebar--*/
 .sidebar-segment {float: right;width: 30%;}
 .sidebar-segment .widget {margin-bottom: 20px;}
