--- a/site-custom.css
+++ b/site-custom.css
@@ -82,12 +82,12 @@ a, button {-webkit-tap-highlight-color: rgba(0, 0, 0, 0);}
 .nav li .icon+span {font-size: 0.9em;}
 }
 /* Styling the toggle menu link and hiding it */
-.nav .navtoogle {display: none;width: 100%;padding: 0.5em 0.5em 0.8em;font-family: 'Lato', Calibri, Arial, sans-serif;font-weight: normal;text-align: left;color: rgb(7, 16, 15);font-size: 1.2em;background: none;border: none;border-bottom: 4px solid rgb(221, 221, 221);cursor: pointer;}
+.nav .navtoogle {display: none;width: 100%;padding: 0.5em 0.5em 0.8em;font-family: Georgia,Tahoma,Arial,Sans-serif;font-weight: normal;text-align: left;color: rgb(7, 16, 15);font-size: 1.2em;background: none;border: none;border-bottom: 4px solid rgb(221, 221, 221);cursor: pointer;}
 .navtoogle i {z-index: -1;}
 .icon-menu {position: relative;top: 3px;line-height: 0;font-size: 1.6em;}
 @media ( max-width : 32.438em) {
 .main-menu {min-height: 5em;}
-.nav li span.icon {width: 40%;}
+.nav li span.icon {width: 30%;}
 /* Unhiding the styled menu link */
 .nav .navtoogle {margin: 0;display: block;}
 /* Animating the height of the navigation when the button is clicked */
