--- a/site-default.css
+++ b/site-default.css
@@ -24,6 +24,10 @@ input {border: none;box-sizing: border-box;}
 .widget li {padding: 0;}
 .widget ul {padding: 0;}
 .widget-item-control {display: none !important;}
+.item-control {display: none}
+.item-control{font-size: 18px;}
+.item-control a, .item-action a {text-decoration: none !important}
+.icon-action {border-style: none !important;	margin: 0 0 0 .5em !important;vertical-align: middle}
 .entry-content h2, .entry-content h3, .entry-content h4 {font-weight: bold;margin-bottom: 10px;margin-top: 10px;font-family: Arial,Georgia,Serif;}
 .entry-content {font-size: 1.1rem;}
 .entry-content h4 {font-size:1.2rem;}
@@ -115,19 +119,65 @@ input {border: none;box-sizing: border-box;}
 .profile-item:last-child {margin-right: 0 !important;}
 .profile-anchor {display: block;width: 30px;height: 30px;text-align: center;line-height: 30px;color: #000;}
 .profile-anchor:hover {background: #21759b;}
+.author-profile {margin: 5px 5px 0 0;overflow: hidden}
+.author-profile img {border: 1px solid #efefef;float: left;margin-right: 5px}
 /*--CommentsStyle--*/
+#comments .comment-author {padding-left: 25px}
+#comments .avatar-comment-indent .comment-author {margin-left: -45px;padding-left: 45px}
+#comment-actions {background: transparent;border: 0;padding: 0;position: absolute;height: 25px}
+#comment-popup {position: absolute;visibility: hidden;width: 100px;height: 20px}
+#comments .blogger-comment-icon, .blogger-comment-icon {line-height: 16px;background: url(/img/b16-rounded.gif) left no-repeat;padding-left: 20px}
+#comments .openid-comment-icon, .openid-comment-icon {line-height: 16px;background: url(/img/openid16-rounded.gif) left no-repeat;padding-left: 20px}
+#comments .anon-comment-icon, .anon-comment-icon {line-height: 16px;background: url(/img/anon16-rounded.gif) left no-repeat;padding-left: 20px}
+.comment-body {margin: .5em 25px}
+.comment-body p {margin: 0}
+.comment-form {border: 2px solid #21759b;clear: both;_width: 410px;}
+.comment-footer {margin: .5em 25px 1.5em;}
 .comments-section {margin-top: 40px;width: 100%;}
-.comment {padding: 0 !important;margin: 0 !important;font-size: 0.875rem;}
+.comment {clear: both;padding: 0 !important;margin: 0 !important;font-size: 0.875rem;}
+.comments {clear: both;margin-top: 10px;margin-bottom: 0;position: relative;}
 .comments .comment-block {background-color: #f8f8f8;border: 1px solid #f0f0f0;margin-left: 48px;position: relative;}
-.comment-header {background-color: #eaeaea;padding: 10px 20px;border-bottom: 2px solid #21759b;}
+.comment-header {background-color: #eaeaea;padding: 10px 20px;border-bottom: 2px solid #21759b;margin: 0 0 8px}
 .comments .comments-content .datetime {margin-left: 6px;float: right;}
-.comment-content {padding: 10px 20px;line-height: 1.8;}
+.comment-content {padding: 10px 20px;line-height: 1.8;margin: 0 0 8px;text-align: justify;}
 .comment-actions {text-align: left;padding: 10px 20px;display: block;width: 100%;}
+.comments .comments-content .comment-header, .comments .comments-content .comment-content{margin: 0 0 8px}
+.comments .comments-content {margin-bottom: 16px}
+.comments .comments-content .comment {margin-bottom: 16px;padding-bottom: 8px}
+.comments .comments-content .comment:first-child {padding-top: 16px}
+.comments .comments-content .comment:last-child {border-bottom: 0;padding-bottom: 0}
+.comments .comments-content .comment-body {position: relative}
+.comments .comments-content .comment-content {text-align: justify}
+.comments .comments-content .owner-actions {position: absolute;right: 0;top: 0}
 .comments .comment .comment-actions a {background: #21759b;border-radius: 5px;color: #ffffff;font: 12px georgia;margin-right: 8px;padding: 5px;text-decoration: none !important;}
-.continue a {background: #21759b;border: 1px solid #21759b;border-radius: 5px;color: #ffffff;display: inline-block !important;margin-top: 8px;padding: 5px;text-decoration: none !important;font: 12px georgia, arial;}
+.comments .comment .comment-actions a:hover {text-decoration: underline}
+.comments .continue {cursor: pointer}
+.comments .continue a  {background: #21759b;border: 1px solid #21759b;border-radius: 5px;color: #ffffff;display: inline-block !important;margin-top: 8px;padding: 5px;text-decoration: none !important;font: 12px georgia, arial;}
 .comment-block {background: #F9F9F9;border: 1px solid #f1f1f1;margin-bottom: 20px;-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .4);-moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .4);box-shadow: 0 1px 2px rgba(0, 0, 0, .4);-moz-border-radius: 10px;-webkit-border-radius: 10px;border-radius: 10px;}
-.comments .comment-thread.inline-thread {border-left: 4px dotted #eaeaea;}
-.comment-form {border: 2px solid #21759b;}
+.comments .comment-thread.inline-thread {border-left: 4px dotted #eaeaea;padding: .5em 1em;}
+.comments .comments-content .comment-thread ol {list-style-type: none;padding: 0;text-align: left}
+.comments .comments-content .comment-thread {	margin: 8px 0}
+.comments .comments-content .comment-thread:empty {display: none}
+.comments .avatar-image-container {float: left;max-height: 36px;overflow: hidden;width: 36px}
+.comments .avatar-image-container img {max-width: 36px}
+.comments .comments-content .icon.blog-author {display: inline-block;	height: 18px;margin: 0 0 -4px 6px;width: 18px}
+.comments .comments-content .user {font-style: normal;font-weight: bold}
+.comments .comments-content .comment-replies {margin-left: 36px;margin-top: 1em}
+.comments .comments-replybox {border: none;height: 250px;width: 100%}
+.comments .comment-replybox-single {margin-left: 48px;margin-top: 5px}
+.comments .comment-replybox-thread {margin-top: 5px}
+.comments .comments-content .loadmore a {display: block;padding: 10px 16px;text-align: center}
+.comments .thread-toggle {cursor: pointer;display: inline-block}
+.comments .comments-content .loadmore {cursor: pointer;margin-top: 3em;max-height: 3em}
+.comments .comments-content .loadmore.loaded {max-height: 0;opacity: 0;overflow: hidden}
+.comments .thread-chrome.thread-collapsed {display: none}
+.comments .thread-toggle .thread-arrow {display: inline-block;height: 6px;margin: .3em;overflow: visible;padding-right: 4px;width: 7px}
+.comment-action-icon {width: 13px;height: 13px;margin-top: 3px}
+.deleted-comment {font-style: italic;opacity: .5}
+.comment-link {white-space: nowrap}
+.paging-control-container {float: right;margin: 0 6px 0 0;font-size: 80%}
+.unneeded-paging-control {visibility: hidden}
+
 /*--searchStatus--*/
 .status-msg-wrap {font-size: 1rem;width: 100%;margin-top: 0 !important;margin-bottom: 20px;position: relative;}
 .status-msg-wrap a{padding-left:.4em;text-decoration:underline}
@@ -253,6 +303,11 @@ overflow: hidden;padding: 10px;margin: 0 0 10px;font-family: Arial,Georgia,Serif
 .social_pinterest:before {background-color: #94151B;}
 .social_linkedin {background-color: #0275B6; border-bottom: 4px solid #015380;}
 .social_linkedin:before {background-color: #015380;}
+/*--google+--*/
+.dummy-container, .google-plus-share-container {vertical-align: top;padding-left: .3em}
+.goog-inline-block {position: relative;display: -moz-inline-box;display: inline-block}
+* html .goog-inline-block {display: inline}
+*:first-child+html .goog-inline-block {display: inline}
 /*--SocialIcons--*/
 .footer-social-icons{margin-top: 2px;width: 100%;height: 40px;text-align: center;}
 .footer-social-icons a{display: inline-block;width: 35px;height: 35px;	cursor: pointer;border-radius: 50%;font-size: 20px;color: #ffffff !important;text-align: center;line-height: 35px;margin-right: 3px;margin-bottom: 5px;}
@@ -289,17 +344,27 @@ overflow: hidden;padding: 10px;margin: 0 0 10px;font-family: Arial,Georgia,Serif
 .back-to-top {position: fixed;bottom: 1.5em;right: 5px;font-size:40px;z-index: 99;}
 /*--ContactForm--*/
 .contact-form-widget {margin-left:auto;margin-right:auto;width: 600px;max-width: 100%;padding: 0px;color: #000;}
-.fm_name, .fm_email {float:left;padding:5px;width:48%}
+.fm_name, .fm_email {float:left;padding:5px;width:50%}
 .fm_message {padding:5px;}
-.contact-form-name, .contact-form-email {width: 100%;max-width: 100%;margin-bottom: 10px;height:35px;padding:10px;font-size:14px;}
-.contact-form-email-message {width:100%;max-width: 100%;height:100px;margin-bottom:10px;padding:10px;font-size:14px;}
+.contact-form-name, .contact-form-email {width: 100%;max-width: 100%;margin-bottom: 10px;height:35px;padding:10px;font-size:1em;background: #fff;background-color: #fff;border: 1px solid #d9d9d9;border-top: 1px solid #c0c0c0;box-sizing: border-box;display: inline-block;}
+.contact-form-email-message {width:100%;max-width: 100%;height:100px;margin-bottom:10px;padding:10px;font-size:1em;border: 1px solid #d9d9d9;border-top: 1px solid #c0c0c0;box-sizing: border-box;display: inline-block;}
 .contact-form-button-submit {width: 100%;margin: 0;border: 0;border-radius: 2px;-moz-border-radius: 2px;background: #000;background: #21759b;color: #fff;cursor: pointer;font-size: 13px;height: 33px;}
+.contact-form-success-message {background: #f9edbe;border: 0 solid #f0c36d;	bottom: 0;box-shadow: 0 2px 4px rgba(0, 0, 0, .2);color: #222;font-size: 11px;line-height: 19px;margin-left: 0;opacity: 1;position: static;text-align: center}
+.contact-form-error-message {background: #f9edbe;border: 0 solid #f0c36d;bottom: 0;box-shadow: 0 2px 4px rgba(0, 0, 0, .2);color: #666;font-size: 11px;font-weight: bold;line-height: 19px;margin-left: 0;opacity: 1;position: static;text-align: center}
 /*--AboutUs--*/
 .about-frame {width: 100%;overflow: hidden;}
 .about-tag {float: left;width: 60%;line-height: 1.4;}
 .image-tag{float: left;width: 30%;}
 .image-tag img{border-radius: 25%;}
-.item-control{font-size: 18px;}
+/*OtherDefaults*/
+.BlogArchive #ArchiveList ul li {background: none;list-style: none;
+list-style-image: none;list-style-position: outside;border-width: 0;padding-left: 15px;text-indent: -15px;margin: .25em 0;background-image: none}
+.BlogArchive #ArchiveList ul ul li {padding-left: 1.2em}
+.BlogArchive #ArchiveList ul {margin: 0;padding: 0;list-style: none;list-style-image: none;border-width: 0}
+.BlogArchive #ArchiveList ul.posts li {padding-left: 1.3em}
+.reactions-label {margin: 3px 0 0 0}
+.reactions-label-cell {line-height: 2.3em}
+.reactions-iframe {background: transparent;height: 2.3em;width: 100%;border: 0}
 /*--MediaResolution--*/
 @media only screen and (max-width: 1200px) {
 .container {width: 96%;}
@@ -341,9 +406,11 @@ overflow: hidden;padding: 10px;margin: 0 0 10px;font-family: Arial,Georgia,Serif
 .author-footer {text-align: center;line-height: 0.9;}
 .author-profiles {float: none;display: inline-block;}
 .related-posts-item {float: none !important;width: 100% !important;}
+.fm_name, .fm_email {position:relative;width:98%}
 }
 @media only screen and (max-width: 500px) {
 .post-timestamp {margin-right: 40px;}
+.comments .comments-content .comment-replies {margin-left: 0}
 }
 @media only screen and (max-width: 415px) {
 .post-image-segment {height: 230px;}
@@ -363,6 +430,7 @@ overflow: hidden;padding: 10px;margin: 0 0 10px;font-family: Arial,Georgia,Serif
 .related-posts-image {max-height: 150px !important;}
 .comment-tab-item {padding: 10px 8px 8px !important;}
 #footer-segment {padding: 0;font-size: 10px;}
+.search-box  form input {width: 255px;}
 }
 @media only screen and (max-width: 288px) {
 .read-more {padding: 16px;width:100%;}
