--- a/site-custom.css
+++ b/site-custom.css
@@ -1,5 +1,29 @@
 .main-menu {width: 100%;margin: 0 auto;padding: 0;max-width: 82.667em;min-height: 15.5em;}
-.icon-home, .icon-blog, .icon-social, .icon-internet, .icon-mobile,.icon-about, .icon-contact, .icon-menu {font-family: FontAwesome;speak: none;font-style: normal;font-weight: normal;font-variant: normal;text-transform: none;line-height: 1;-webkit-font-smoothing: antialiased;}
+.icon-home, .icon-blog, .icon-social, .icon-internet, .icon-mobile,.icon-about, .icon-contact, .icon-menu,.icon-google,.icon-facebook,.icon-twitter,.icon-rss,.icon-pin,.icon-ytube,.icon-linkedin {font-family: FontAwesome;speak: none;font-style: normal;font-weight: normal;font-variant: normal;text-transform: none;line-height: 1;-webkit-font-smoothing: antialiased;}
+
+.icon-gplus:before {content:"\f0d5";}
+.icon-facebook:before {content:"\f09a";}
+.icon-twitter:before {content:"\f0e1";}
+.icon-rss:before {content:"\f09e";}
+.icon-pin:before {content:"\f231";}
+.icon-ytube:before {content:"\f167";}
+.icon-linkedin:before {content:"\f0e1";}
+.icon-user:before {content:"\f007";}
+.icon-clock:before {content:"\f017";}
+.icon-comment:before {content:"\f0e5";}
+.icon-edit:before {content:"\f040";}
+.icon-tag:before {content:"\f02c";}
+.icon-arrow-up:before {content:"\f062";}
+.icon-delete:before {content:"\f1f8";}
+.icon-email:before {content:"\f0e0";}
+.icon-submit:before {content:"\f1d9";}
+.icon-search:before {content:"\f002";}
+.icon-lock:before {content:"\f023";}
+.icon-exclamation:before {content:"\f071";}
+.icon-setting:before {content:"\f0ad";}
+.icon-share:before {content:"\f1e0";}
+.icon-whatsapp:before {content:"\f232";}
+
 .icon-home:before {content: "\f015";}
 .icon-blog:before {content:"\f02d";}
 .icon-social:before {content: "\f164";}
